Добавлены Virtual Threads, а также схема разделена на таблицы и индексы